--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
   font-family: sans-serif;
 }
 body {
-  background-image: url(../img/avatar-2-scaled.webp);
+  background: url(../img/avatar-2-scaled.webp) no-repeat center fixed;
   background-size: cover;
 
   overflow: hidden;
@@ -19,7 +19,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg, rgb(0, 0, 0) 25%, transparent);
+    background: linear-gradient(0deg, rgb(0, 0, 0) 30%, transparent);
     transition: 0.5s;
     z-index: 1;
   }
@@ -84,6 +84,7 @@ body {
     box-sizing: border-box;
     transition: 0.5s;
     z-index: 2;
+    overflow: auto;
     .imgcontent {
       color: #fff;
       margin: 0;
